asteria/core/tests/errors/elaboration_errors/incorrect_type_for_constructor_declaration_return_type.asteriacore
data Unit where
   | MkUnit : Test$Unit() -> Test$Unit()
   ;;
